# rot_conv_lib-release

./: 0001-match-package-name-in-project-name-of-CMakeLists.txt.patch  0001-update-CMakeLists.txt-to-work-with-ament.patch  0002-modify-cmakelist.patch  0003-use-spaces-and-not-tabs.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
patch/: package.xml
rpm/: ros-humble-rot-conv.spec  ros-jazzy-rot-conv.spec  ros-rolling-rot-conv.spec  ros-rolling-rotconv.spec  template.spec
