<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rot_conv_lib</name>
  <version>1.0.2</version>
  <description>A collection of functions that address common computations and numerical handling of rotations in 3D Euclidean space</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
