<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rot_conv</name>
  <version>1.1.0</version>
  <description>A collection of functions that address common computations and numerical handling of rotations in 3D Euclidean space</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- See https://github.com/ros2/eigen3_cmake_module/blob/master/README.md for tags below-->
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>